loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:1: error: Missing closing brace `}' assumed here
var x:Int = 0
^